# bmore-transit

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: main.py  metrics.py
api/app/db/: connection.py
api/app/routers/: replay.py  routes.py  stops.py  vehicles.py
api/app/services/: eta.py  redis_client.py
api/tests/: test_eta_properties.py  test_health.py
infra/valhalla/: start.sh
ingest/: Dockerfile  __init__.py  pyproject.toml
ingest/src/: __init__.py  feeds.py  main.py  match_routes.py  metrics.py  normalize.py  writers.py
ingest/tests/: test_normalize.py
scripts/: create_db.sql  load_gtfs.sh
sql/: functions.sql  schema.sql
web-angular/: Dockerfile  angular.json  package.json  tsconfig.app.json
web-angular/docker-entrypoint.d/: 99-env.sh
web-angular/src/: env.js  index.html  main.ts  styles.css
web-angular/src/app/: app.config.ts  app.routes.ts
web-angular/src/app/core/: api.service.ts  http-error.interceptor.ts
web-angular/src/app/map/: map-shell.component.html  map-shell.component.scss  map-shell.component.ts
web-angular/src/app/shared/pipes/: time-ago.pipe.ts
